--- a/index.html
+++ b/index.html
@@ -3,13 +3,98 @@
 
 <head>
     <title>James King</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
 </head>
 
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>This is a work in progress.</p>
-</body>
+    <main>
+        <h1>James King</h1>
+        <p>
+            Hello, and welcome to my website! I'm a Computer Science & Engineering 
+            Major at UCLA. In my free time, I enjoy wandering Westwood and watching the Dodgers.
+        </p>
+        <p>
+            This is a work in progress!
+        </p>
+    </main>
 
+    <nav>
+        <ul>
+            <a href="#about"><li>About</li></a>
+            <a href="#experience"><li>Experience</li></a>
+            <a href="#community"><li>Community</li></a>
+            <a href="#contact"><li>Contact</li></a>
+        </ul>
+    </nav>
+
+    <section id="about">
+        <h3>About Me</h3>
+        <p>See my resume <a href="resources/resume.pdf"><u>here</u></a>.</p>
+    </section>
+
+    <section id="experience">
+        <h3>Past Experience</h3>
+        <div>
+            <h4>ELFIN</h4>
+            <img src="resources/elfin.png">
+            <p>
+                A space weather mission at UCLA.
+            </p>
+        </div>
+        <div>
+                <h4>AudioDash</h4>
+                <img src="resources/AudioDash.png">
+                <p>
+                    AudioDash enables users to train their reaction time for multiple sports 
+                    and athletic activities. It was created at UC Irvine COSMOS 2017.
+                </p>
+        </div>
+        <div>
+            <h4>Logos</h4>
+            <img src="">
+            <p>
+                Placeholder
+            </p>
+        </div>
+    </section>
+
+    <section id="community">
+        <h3>Volunteer Work</h3>
+        <div>
+            <p>
+                I volunteered at Valley Presbyterian Hospital from 2014 to 2018. During this 
+                time, I had various responsibilites from transporting supplies and equipment 
+                to delivering meals to patients.
+            </p>
+            <img src="resources/VPH.jpg">
+        </div>
+        <div>
+            <p>
+                As a Teacher's Assistant at Thousand Oaks Chinese School, I had the opportunity 
+                to help teach children.
+            </p>
+            <img src="resources/TOCS.png">
+        </div>
+        <div>
+            <p>
+                On UCLA Volunteer Day 2018, I helped paint and restore the Mt. Carmel Recreation 
+                Center in South LA.
+            </p>
+            <img src="resources/UCLAVolunteerDay.png">
+        </div>
+    </section>
+
+    <section id="contact">
+        <h3>Contact Me</h3>
+        <p>Email: jcking1034_AT_gmail_DOT_com</p>
+        <a href="https://github.com/jcking1034">
+            <img src="resources/GitHub-Mark-64px.png">
+        </a>
+        <a href="https://www.linkedin.com/in/jcking1034/">
+            <img src="resources/In-2C-66px-TM.png">
+        </a>
+    </section>
+</body>
 
 </html>
