--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <nav>
         <ul>
-            <a href="#about"><li>About</li></a>
-            <a href="#experience"><li>Experience</li></a>
-            <a href="#community"><li>Community</li></a>
-            <a href="#contact"><li>Contact</li></a>
+            <a href="http://jcking1034.github.io/#about"><li>About</li></a>
+            <a href="http://jcking1034.github.io/#experience"><li>Experience</li></a>
+            <a href="http://jcking1034.github.io/#community"><li>Community</li></a>
+            <a href="http://jcking1034.github.io/#contact"><li>Contact</li></a>
         </ul>
     </nav>
 
