--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
     <title>James King</title>
+
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+
+    <script type="text/javascript" src="scripts.js"></script>
 </head>
 
-<body>
+<body onscroll="scrollDetect()">
     <main>
         <h1>James King</h1>
         <p>
@@ -17,14 +20,15 @@
         <p>
             This is a work in progress!
         </p>
+        <!-- TODO: Add something else here -->
     </main>
 
     <nav>
         <ul>
-            <a href="http://jcking1034.github.io/#about"><li>About</li></a>
-            <a href="http://jcking1034.github.io/#experience"><li>Experience</li></a>
-            <a href="http://jcking1034.github.io/#community"><li>Community</li></a>
-            <a href="http://jcking1034.github.io/#contact"><li>Contact</li></a>
+            <a href="#about"><li>About</li></a>
+            <a href="#experience"><li>Experience</li></a>
+            <a href="#community"><li>Community</li></a>
+            <a href="#contact"><li>Contact</li></a>
         </ul>
     </nav>
 
@@ -52,7 +56,7 @@
         </div>
         <div>
             <h4>Logos</h4>
-            <img src="">
+            <img src="resources/logos.svg">
             <p>
                 Placeholder
             </p>
@@ -88,12 +92,18 @@
     <section id="contact">
         <h3>Contact Me</h3>
         <p>Email: jcking1034_AT_gmail_DOT_com</p>
-        <a href="https://github.com/jcking1034">
-            <img src="resources/GitHub-Mark-64px.png">
-        </a>
-        <a href="https://www.linkedin.com/in/jcking1034/">
-            <img src="resources/In-2C-66px-TM.png">
-        </a>
+        <p>
+            <img class="contactimg" src="resources/GitHub-Mark-120px-plus.png">
+            <a href="https://github.com/jcking1034">
+                GitHub
+            </a>
+        </p>
+        <p>
+            <img class="contactimg" src="resources/In-2C-66px-TM.png">
+            <a href="https://www.linkedin.com/in/jcking1034/">
+                LinkedIn
+            </a>
+        </p>
     </section>
 </body>
 
