--- a/index.html
+++ b/index.html
@@ -5,25 +5,28 @@
     <title>James King</title>
 
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
 
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 
 <body onscroll="scrollDetect()">
     <main>
-        <h1>James King</h1>
-        <p>
-            Hello, and welcome to my website! I'm a Computer Science & Engineering 
-            Major at UCLA. In my free time, I enjoy wandering Westwood and watching the Dodgers.
-        </p>
-        <p>
-            This is a work in progress!
-        </p>
+        <div id="mainContain">
+            <h1>James King</h1>
+            <p>
+                Hello, and welcome to my website! I'm a Computer Science & Engineering 
+                Major at UCLA. In my free time, I enjoy wandering Westwood and watching the Dodgers.
+            </p>
+            <p>
+                This is a work in progress!
+            </p>
+        </div>
         <!-- TODO: Add something else here -->
     </main>
 
     <nav>
+        <p>James King</p>
         <ul>
             <a href="#about"><li>About</li></a>
             <a href="#experience"><li>Experience</li></a>
@@ -34,7 +37,7 @@
 
     <section id="about">
         <h3>About Me</h3>
-        <p>See my resume <a href="resources/resume.pdf"><u>here</u></a>.</p>
+        <p>See my resume <a href="resources/resume.pdf">here</a>.</p>
     </section>
 
     <section id="experience">
