--- a/index.html
+++ b/index.html
@@ -44,24 +44,31 @@
         <h3>Past Experience</h3>
         <div>
             <h4>ELFIN</h4>
-            <img src="resources/elfin.png">
+            <img class="icons" src="resources/elfin.png">
             <p>
-                A space weather mission at UCLA.
+                ELFIN is a mission to better understand space weather. As part of the science
+                processing team, I assist with automating the creation of files containing
+                science data. More information can be found 
+                <a href="https://elfin.igpp.ucla.edu">here</a>.
             </p>
         </div>
         <div>
-                <h4>AudioDash</h4>
-                <img src="resources/AudioDash.png">
-                <p>
-                    AudioDash enables users to train their reaction time for multiple sports 
-                    and athletic activities. It was created at UC Irvine COSMOS 2017.
-                </p>
+            <h4>AudioDash</h4>
+            <img class="icons" src="resources/AudioDash.png">
+            <p>
+                AudioDash enables users to train their reaction time for multiple sports 
+                and athletic activities. The app, created at UC Irvine COSMOS 2017, features
+                the use of sound spatialization in order to simulate a 3D environment with 
+                sounds originating from different locations.
+            </p>
         </div>
         <div>
             <h4>Logos</h4>
-            <img src="resources/logos.svg">
+            <img class="icons" src="resources/logos.svg">
             <p>
-                Placeholder
+                Logos is a news application dedicated to providing a platform that can be
+                used to engage users in conversation and to inspire the sharing of different
+                perspectives.
             </p>
         </div>
     </section>
@@ -74,21 +81,22 @@
                 time, I had various responsibilites from transporting supplies and equipment 
                 to delivering meals to patients.
             </p>
-            <img src="resources/VPH.jpg">
+            <img class="icons" src="resources/VPH.jpg">
         </div>
         <div>
             <p>
                 As a Teacher's Assistant at Thousand Oaks Chinese School, I had the opportunity 
-                to help teach children.
+                to help children learn a new language. I provided support and made sure that
+                students had the chance to succeed.
             </p>
-            <img src="resources/TOCS.png">
+            <img class="icons" src="resources/TOCS.png">
         </div>
         <div>
             <p>
                 On UCLA Volunteer Day 2018, I helped paint and restore the Mt. Carmel Recreation 
                 Center in South LA.
             </p>
-            <img src="resources/UCLAVolunteerDay.png">
+            <img class="icons" src="resources/UCLAVolunteerDay.png">
         </div>
     </section>
 
