--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
 
-    <script type="text/javascript" src="scripts.js"></script>
 </head>
 
-<body onscroll="scrollDetect()">
+<body>
     <main>
         <div id="mainContain">
             <h1>James King</h1>
@@ -22,6 +21,10 @@
                 This is a work in progress!
             </p>
         </div>
+
+        <a href="#about">
+            <div id="downArrow"></div>
+        </a>
         <!-- TODO: Add something else here -->
     </main>
 
