Content Updates and smooth scrolling

--- a/index.html
+++ b/index.html
@@ -13,13 +13,6 @@
     <main>
         <div id="mainContain">
             <h1>James King</h1>
-            <p>
-                Hello, and welcome to my website! I'm a Computer Science & Engineering 
-                Major at UCLA. In my free time, I enjoy wandering Westwood and watching the Dodgers.
-            </p>
-            <p>
-                This is a work in progress!
-            </p>
         </div>
 
         <a href="#about">
@@ -40,6 +33,11 @@
 
     <section id="about">
         <h3>About Me</h3>
+        <p>
+            Hello, and welcome to my website! I'm a Computer Science & Engineering 
+            Major at UCLA. In my free time, I enjoy wandering Westwood and watching 
+            the Dodgers.
+        </p>
         <p>See my resume <a href="resources/resume.pdf">here</a>.</p>
     </section>
 
@@ -49,10 +47,9 @@
             <h4>ELFIN</h4>
             <img class="icons" src="resources/elfin.png">
             <p>
-                ELFIN is a mission to better understand space weather. As part of the science
+                <a href="https://elfin.igpp.ucla.edu">ELFIN</a> is a mission to better understand space weather. As part of the science
                 processing team, I assist with automating the creation of files containing
-                science data. More information can be found 
-                <a href="https://elfin.igpp.ucla.edu">here</a>.
+                science data.
             </p>
         </div>
         <div>
@@ -69,9 +66,9 @@
             <h4>Logos</h4>
             <img class="icons" src="resources/logos.svg">
             <p>
-                Logos is a news application dedicated to providing a platform that can be
-                used to engage users in conversation and to inspire the sharing of different
-                perspectives.
+                <a href="https://logosnews.tech/auth/login">Logos</a> is a news application 
+                dedicated to providing a platform that can be used to engage users in 
+                conversation and to inspire the sharing of different perspectives.
             </p>
         </div>
     </section>
