Content and visual updates

--- a/index.html
+++ b/index.html
@@ -76,27 +76,38 @@
     <section id="community">
         <h3>Volunteer Work</h3>
         <div>
+            <h4>2019 AID Summer</h4>
             <p>
-                I volunteered at Valley Presbyterian Hospital from 2014 to 2018. During this 
-                time, I had various responsibilites from transporting supplies and equipment 
-                to delivering meals to patients.
+                During the summer of 2019, I had the opportunity to teach English at 
+                Xinyi Middle School in Taipei. After a week-long training session focused on
+                effective communication and teamwork, I spent two weeks with middle school
+                students, helping them build critical language skills. 
             </p>
-            <img class="icons" src="resources/VPH.jpg">
         </div>
         <div>
+            <h4>Valley Presbyterian Hospital</h4>
+            <img class="icons" src="resources/VPH.jpg">
+            <p>
+                I volunteered at Valley Presbyterian Hospital in Van Nuys from 2014 to 2018. 
+                During this time, I had various responsibilites from transporting supplies 
+                and equipment to delivering meals to patients.
+            </p>
+        </div>
+        <div>
+            <h4>Thousand Oaks Chinese School</h4>
+            <img class="icons" src="resources/TOCS.png">
             <p>
                 As a Teacher's Assistant at Thousand Oaks Chinese School, I had the opportunity 
                 to help children learn a new language. I provided support and made sure that
                 students had the chance to succeed.
             </p>
-            <img class="icons" src="resources/TOCS.png">
         </div>
         <div>
+            <h4>UCLA Volunteer Day</h4>
             <p>
-                On UCLA Volunteer Day 2018, I helped paint and restore the Mt. Carmel Recreation 
-                Center in South LA.
+                On UCLA Volunteer Day 2018, I helped clean, paint, and restore the Mt. Carmel 
+                Recreation Center in South Los Angeles.
             </p>
-            <img class="icons" src="resources/UCLAVolunteerDay.png">
         </div>
     </section>
 
