--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico">
 </head>
 
 <body>
