Updated content and link styling

--- a/index.html
+++ b/index.html
@@ -48,19 +48,22 @@
             <h4>ELFIN</h4>
             <img class="icons" src="resources/elfin.png">
             <p>
-                <a href="https://elfin.igpp.ucla.edu">ELFIN</a> is a mission to better understand space weather. As part of the science
-                processing team, I assist with automating the creation of files containing
-                science data.
+                <a href="https://elfin.igpp.ucla.edu">ELFIN</a> is a mission to better understand 
+                space weather. As part of the science processing team, I use Python to automate the 
+                creation of files containing formatted science data. This process involves performing 
+                scientific calculations and decompressing data, among other things, in order to present
+                the data in a form that is easier for scientists to use.
             </p>
         </div>
         <div>
             <h4>AudioDash</h4>
             <img class="icons" src="resources/AudioDash.png">
             <p>
-                AudioDash enables users to train their reaction time for multiple sports 
-                and athletic activities. The app, created at UC Irvine COSMOS 2017, features
-                the use of sound spatialization in order to simulate a 3D environment with 
-                sounds originating from different locations.
+                <a href="https://github.com/jcking1034/AudioDash">AudioDash</a> is an iOS app that enables 
+                users to train their reaction timem, with potential applications for sports and athletic 
+                activities. The app, created at UC Irvine COSMOS 2017, features the use of sound 
+                spatialization in order to simulate a 3D environment with sounds originating from 
+                different locations.
             </p>
         </div>
         <div>
@@ -69,7 +72,9 @@
             <p>
                 <a href="https://logosnews.tech/auth/login">Logos</a> is a news application 
                 dedicated to providing a platform that can be used to engage users in 
-                conversation and to inspire the sharing of different perspectives.
+                conversation and to inspire the sharing of different perspectives. My contributions to
+                the front end of the app resulted in substantial improvements to the layout of the user
+                profile page and the overall functionality.
             </p>
         </div>
     </section>
