--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Mukta&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
 
     <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico">
 </head>
 
 <body>
     <main>
-        <div id="mainContain">
+        <div id="mainContain" class="animated fadeIn">
             <h1>James King</h1>
         </div>
 
