--- a/index.html
+++ b/index.html
@@ -7,134 +7,26 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Mukta&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="animate.css">
 
     <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico">
+
 </head>
 
 <body>
-    <main>
-        <div id="mainContain" class="animated fadeIn">
-            <h1>James King</h1>
+    <canvas id="backgroundCanvas"></canvas>
+    <div id="container">
+        <div id="nameContainer">
+            <h1 id="name">James King</h1>
         </div>
-
-        <a href="#about">
-            <div id="downArrow"></div>
-        </a>
-        <!-- TODO: Add something else here -->
-    </main>
-
-    <nav>
-        <p>James King</p>
-        <ul>
-            <a href="#about"><li>About</li></a>
-            <a href="#experience"><li>Experience</li></a>
-            <a href="#community"><li>Community</li></a>
-            <a href="#contact"><li>Contact</li></a>
-        </ul>
-    </nav>
-
-    <section id="about">
-        <h3>About Me</h3>
-        <p>
-            Hello, and welcome to my website! I'm a Computer Science & Engineering 
-            Major at UCLA. In my free time, I enjoy wandering Westwood and watching 
-            the Dodgers.
-        </p>
-        <p>See my resume <a href="resources/resume.pdf">here</a>.</p>
-    </section>
-
-    <section id="experience">
-        <h3>Past Experience</h3>
-        <div>
-            <h4>ELFIN</h4>
-            <img class="icons" src="resources/elfin.png">
-            <p>
-                <a href="https://elfin.igpp.ucla.edu">ELFIN</a> is a mission to better understand 
-                space weather. As part of the science processing team, I use Python to automate the 
-                creation of files containing formatted science data. This process involves performing 
-                scientific calculations and decompressing data, among other things, in order to present
-                the data in a form that is easier for scientists to use.
-            </p>
+        <div id="links">
+            <a href="mailto:jcking1034@gmail.com">Email</a>
+            <a href="https://www.overleaf.com/read/ftnryyctptfs">Resume</a>
+            <a href="https://github.com/jcking1034">GitHub</a>
+            <a href="https://www.linkedin.com/in/jcking1034/">LinkedIn</a>
         </div>
-        <div>
-            <h4>AudioDash</h4>
-            <img class="icons" src="resources/AudioDash.png">
-            <p>
-                <a href="https://github.com/jcking1034/AudioDash">AudioDash</a> is an iOS app that enables 
-                users to train their reaction timem, with potential applications for sports and athletic 
-                activities. The app, created at UC Irvine COSMOS 2017, features the use of sound 
-                spatialization in order to simulate a 3D environment with sounds originating from 
-                different locations.
-            </p>
-        </div>
-        <div>
-            <h4>Logos</h4>
-            <img class="icons" src="resources/logos.svg">
-            <p>
-                <a href="https://logosnews.tech/auth/login">Logos</a> is a news application 
-                dedicated to providing a platform that can be used to engage users in 
-                conversation and to inspire the sharing of different perspectives. My contributions to
-                the front end of the app resulted in substantial improvements to the layout of the user
-                profile page and the overall functionality.
-            </p>
-        </div>
-    </section>
-
-    <section id="community">
-        <h3>Volunteer Work</h3>
-        <div>
-            <h4>2019 AID Summer</h4>
-            <p>
-                During the summer of 2019, I had the opportunity to teach English at 
-                Xinyi Middle School in Taipei. After a week-long training session focused on
-                effective communication and teamwork, I spent two weeks with middle school
-                students, helping them build critical language skills. 
-            </p>
-        </div>
-        <div>
-            <h4>Valley Presbyterian Hospital</h4>
-            <img class="icons" src="resources/VPH.jpg">
-            <p>
-                I volunteered at Valley Presbyterian Hospital in Van Nuys from 2014 to 2018. 
-                During this time, I had various responsibilites from transporting supplies 
-                and equipment to delivering meals to patients.
-            </p>
-        </div>
-        <div>
-            <h4>Thousand Oaks Chinese School</h4>
-            <img class="icons" src="resources/TOCS.png">
-            <p>
-                As a Teacher's Assistant at Thousand Oaks Chinese School, I had the opportunity 
-                to help children learn a new language. I provided support and made sure that
-                students had the chance to succeed.
-            </p>
-        </div>
-        <div>
-            <h4>UCLA Volunteer Day</h4>
-            <p>
-                On UCLA Volunteer Day 2018, I helped clean, paint, and restore the Mt. Carmel 
-                Recreation Center in South Los Angeles.
-            </p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h3>Contact Me</h3>
-        <p>Email: jcking1034_AT_gmail_DOT_com</p>
-        <p>
-            <img class="contactimg" src="resources/GitHub-Mark-120px-plus.png">
-            <a href="https://github.com/jcking1034">
-                GitHub
-            </a>
-        </p>
-        <p>
-            <img class="contactimg" src="resources/In-2C-66px-TM.png">
-            <a href="https://www.linkedin.com/in/jcking1034/">
-                LinkedIn
-            </a>
-        </p>
-    </section>
+    </div>
 </body>
+
+<script src="scripts.js"></script>
 
 </html>
