--- a/index.html
+++ b/index.html
@@ -5,23 +5,22 @@
     <title>James King</title>
 
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Fira+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Mukta&display=swap" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/x-icon" href="resources/favicon.ico">
-
 </head>
 
 <body>
-    <div id="container">
-        <div id="nameContainer">
-            <h1 id="name">James King</h1>
-        </div>
-        <div id="links">
-            <a href="mailto:jcking1034@gmail.com">Email</a>
-            <a href="https://www.overleaf.com/read/ftnryyctptfs">Resume</a>
-            <a href="https://github.com/jcking1034">GitHub</a>
-            <a href="https://www.linkedin.com/in/jcking1034/">LinkedIn</a>
+    <div class="container">
+        <div class="card">
+            <div class="name">
+                <h1>James King</h1>
+            </div>
+            <div class="links">
+                <a href="mailto:jcking1034@gmail.com" target="_blank" rel="noopener noreferrer">Email</a>
+                <a href="https://www.overleaf.com/read/ftnryyctptfs" target="_blank" rel="noopener noreferrer">Resume</a>
+                <a href="https://github.com/jcking1034" target="_blank" rel="noopener noreferrer">GitHub</a>
+                <a href="https://www.linkedin.com/in/jcking1034/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+            </div>
         </div>
     </div>
 </body>
